tests/NormalTests/paczka1/fuzzy1/81507925.err
Error in line 5: Y9c8tf A692 42,6
Error in line 4: 8rXI7mU S581 43,4
Error in line 6: AdwrvJYYiM A25 83,5
Error in line 21: A692 A692 94,3
Error in line 20: wjCVqB S222 34,2
